@@ -13,7 +13,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.tuple.Pair;
@@ -50,6 +49,7 @@ import wres.datamodel.time.TimeSeriesUpscaler;
 import wres.datamodel.time.TimeWindowOuter;
 import wres.datamodel.baselines.PersistenceGenerator;
 import wres.io.retrieving.CachingRetriever;
+import wres.statistics.MessageUtilities;
 import wres.statistics.generated.Evaluation;
 import wres.statistics.generated.Geometry;
 import wres.statistics.generated.GeometryGroup;
@@ -154,8 +154,8 @@ class PoolSupplierTest
     private static final Instant T2551_03_17T00_00_00Z = Instant.parse( "2551-03-17T00:00:00Z" );
 
     private static final String VARIABLE_NAME = "STREAMFLOW";
-    private static final Geometry GEOMETRY = wres.statistics.MessageFactory.getGeometry( "DRRC2" );
-    private static final Geometry ANOTHER_GEOMETRY = wres.statistics.MessageFactory.getGeometry( "DRRC3" );
+    private static final Geometry GEOMETRY = MessageUtilities.getGeometry( "DRRC2" );
+    private static final Geometry ANOTHER_GEOMETRY = MessageUtilities.getGeometry( "DRRC3" );
     private static final Feature FEATURE = Feature.of( GEOMETRY );
     private static final Feature ANOTHER_FEATURE = Feature.of( ANOTHER_GEOMETRY );
     private static final String UNIT = "CMS";
@@ -226,12 +226,12 @@ class PoolSupplierTest
         TimeScaleOuter existingTimeScale = TimeScaleOuter.of( Duration.ofHours( 3 ), TimeScaleFunction.MEAN );
 
         // Observations: 25510317T00_FAKE2_observations.xml
-        TimeSeriesMetadata metadata =
+        TimeSeriesMetadata metadataInner =
                 getBoilerplateMetadataWithTimeScale( FEATURE,
                                                      TimeScaleOuter.of( Duration.ofHours( 1 ),
                                                                         TimeScaleFunction.MEAN ) );
         this.observations =
-                new TimeSeries.Builder<Double>().setMetadata( metadata )
+                new TimeSeries.Builder<Double>().setMetadata( metadataInner )
                                                 .addEvent( Event.of( T2551_03_17T00_00_00Z, 313.0 ) )
                                                 .addEvent( Event.of( T2551_03_17T01_00_00Z, 317.0 ) )
                                                 .addEvent( Event.of( T2551_03_17T02_00_00Z, 331.0 ) )
@@ -320,7 +320,7 @@ class PoolSupplierTest
                                                 .build();
 
         this.observationsOne =
-                new TimeSeries.Builder<Double>().setMetadata( metadata )
+                new TimeSeries.Builder<Double>().setMetadata( metadataInner )
                                                 .addEvent( Event.of( T2551_03_17T13_00_00Z, 401.0 ) )
                                                 .addEvent( Event.of( T2551_03_17T14_00_00Z, 409.0 ) )
                                                 .addEvent( Event.of( T2551_03_17T15_00_00Z, 419.0 ) )
@@ -339,7 +339,7 @@ class PoolSupplierTest
                                                 .build();
 
         this.observationsTwo =
-                new TimeSeries.Builder<Double>().setMetadata( metadata )
+                new TimeSeries.Builder<Double>().setMetadata( metadataInner )
                                                 .addEvent( Event.of( T2551_03_18T04_00_00Z, 491.0 ) )
                                                 .addEvent( Event.of( T2551_03_18T05_00_00Z, 499.0 ) )
                                                 .addEvent( Event.of( T2551_03_18T06_00_00Z, 503.0 ) )
@@ -486,7 +486,7 @@ class PoolSupplierTest
         GeometryTuple geoTuple = MessageFactory.getGeometryTuple( FEATURE, FEATURE, FEATURE );
         FeatureTuple featureTuple = FeatureTuple.of( geoTuple );
         GeometryGroup geoGroup =
-                wres.statistics.MessageFactory.getGeometryGroup( featureTuple.toStringShort(), geoTuple );
+                MessageUtilities.getGeometryGroup( featureTuple.toStringShort(), geoTuple );
         FeatureGroup featureGroup = FeatureGroup.of( geoGroup );
 
         wres.statistics.generated.Pool pool = MessageFactory.getPool( featureGroup,
@@ -568,10 +568,10 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierOne = this.forecastRetriever;
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
-                                                                         T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
+                                                           T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolOneWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolOneMetadata = PoolMetadata.of( this.metadata,
@@ -641,10 +641,10 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierOne = this.forecastRetriever;
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
-                                                                         T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
+                                                           T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolOneWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolOneMetadata = PoolMetadata.of( this.metadata,
@@ -729,10 +729,10 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierOne = this.forecastRetriever;
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
-                                                                         T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
+                                                           T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolOneWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolOneMetadata = PoolMetadata.of( this.metadata,
@@ -747,7 +747,7 @@ class PoolSupplierTest
         PoolMetadata poolOneMetadataBaseline = PoolMetadata.of( poolOneMetadata.getEvaluation(), baselinePool );
 
         List<TimeSeries<Double>> climData = obsSupplier.get()
-                                                       .collect( Collectors.toList() );
+                                                       .toList();
 
         Supplier<Climatology> climatology = () -> Climatology.of( climData );
 
@@ -832,10 +832,10 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierEleven = CachingRetriever.of( this.forecastRetriever );
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_18T11_00_00Z, //2551-03-18T11:00:00Z
-                                                                         T2551_03_19T00_00_00Z, //2551-03-19T00:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_18T11_00_00Z, //2551-03-18T11:00:00Z
+                                                           T2551_03_19T00_00_00Z, //2551-03-19T00:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolElevenWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolElevenMetadata = PoolMetadata.of( this.metadata,
@@ -937,10 +937,10 @@ class PoolSupplierTest
                .thenReturn( Stream.of( this.forecastOne, this.forecastTwo, this.forecastThree, this.forecastFour ) );
         Supplier<Stream<TimeSeries<Double>>> forcSupplierEighteen = CachingRetriever.of( this.forecastRetriever );
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_19T08_00_00Z, //2551-03-19T08:00:00Z
-                                                                         T2551_03_19T21_00_00Z, //2551-03-19T21:00:00Z
-                                                                         Duration.ofHours( 17 ),
-                                                                         Duration.ofHours( 40 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_19T08_00_00Z, //2551-03-19T08:00:00Z
+                                                           T2551_03_19T21_00_00Z, //2551-03-19T21:00:00Z
+                                                           Duration.ofHours( 17 ),
+                                                           Duration.ofHours( 40 ) );
         TimeWindowOuter poolEighteenWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolEighteenMetadata = PoolMetadata.of( this.metadata,
@@ -972,66 +972,58 @@ class PoolSupplierTest
         // Create the duplicate observed series for a different feature
         String featureName = "DOSC1";
         Feature feature = Feature.of(
-                wres.statistics.MessageFactory.getGeometry( featureName ) );
+                MessageUtilities.getGeometry( featureName ) );
 
         TimeSeriesMetadata obsMeta = this.observations.getMetadata();
-        TimeSeries<Double> observationsTwo = new TimeSeries.Builder<Double>().addEvents( this.observations.getEvents() )
-                                                                             .setMetadata( new TimeSeriesMetadata.Builder().setReferenceTimes(
-                                                                                                                                   obsMeta.getReferenceTimes() )
-                                                                                                                           .setTimeScale(
-                                                                                                                                   obsMeta.getTimeScale() )
-                                                                                                                           .setUnit(
-                                                                                                                                   obsMeta.getUnit() )
-                                                                                                                           .setVariableName(
-                                                                                                                                   obsMeta.getVariableName() )
-                                                                                                                           .setFeature(
-                                                                                                                                   feature )
-                                                                                                                           .build() )
-                                                                             .build();
+        TimeSeries<Double> observationsTwoInner =
+                new TimeSeries.Builder<Double>().addEvents( this.observations.getEvents() )
+                                                .setMetadata( new TimeSeriesMetadata.Builder()
+                                                                      .setReferenceTimes( obsMeta.getReferenceTimes() )
+                                                                      .setTimeScale( obsMeta.getTimeScale() )
+                                                                      .setUnit( obsMeta.getUnit() )
+                                                                      .setVariableName( obsMeta.getVariableName() )
+                                                                      .setFeature( feature )
+                                                                      .build() )
+                                                .build();
 
-        Mockito.when( this.observationRetriever.get() ).thenReturn( Stream.of( this.observations, observationsTwo ) );
+        Mockito.when( this.observationRetriever.get() )
+               .thenReturn( Stream.of( this.observations, observationsTwoInner ) );
         Supplier<Stream<TimeSeries<Double>>> obsSupplier = CachingRetriever.of( this.observationRetriever );
 
         // Create the duplicate forecast series for a different feature
         TimeSeriesMetadata forcThreeMeta = this.forecastThree.getMetadata();
-        TimeSeries<Double> forecastFive = new TimeSeries.Builder<Double>().addEvents( this.forecastThree.getEvents() )
-                                                                          .setMetadata( new TimeSeriesMetadata.Builder().setReferenceTimes(
-                                                                                                                                forcThreeMeta.getReferenceTimes() )
-                                                                                                                        .setTimeScale(
-                                                                                                                                forcThreeMeta.getTimeScale() )
-                                                                                                                        .setUnit(
-                                                                                                                                forcThreeMeta.getUnit() )
-                                                                                                                        .setVariableName(
-                                                                                                                                forcThreeMeta.getVariableName() )
-                                                                                                                        .setFeature(
-                                                                                                                                feature )
-                                                                                                                        .build() )
-                                                                          .build();
+        TimeSeries<Double> forecastFiveInner =
+                new TimeSeries.Builder<Double>().addEvents( this.forecastThree.getEvents() )
+                                                .setMetadata( new TimeSeriesMetadata.Builder()
+                                                                      .setReferenceTimes( forcThreeMeta.getReferenceTimes() )
+                                                                      .setTimeScale( forcThreeMeta.getTimeScale() )
+                                                                      .setUnit( forcThreeMeta.getUnit() )
+                                                                      .setVariableName( forcThreeMeta.getVariableName() )
+                                                                      .setFeature( feature )
+                                                                      .build() )
+                                                .build();
 
         TimeSeriesMetadata forcFourMeta = this.forecastFour.getMetadata();
-        TimeSeries<Double> forecastSix = new TimeSeries.Builder<Double>().addEvents( this.forecastFour.getEvents() )
-                                                                         .setMetadata( new TimeSeriesMetadata.Builder().setReferenceTimes(
-                                                                                                                               forcFourMeta.getReferenceTimes() )
-                                                                                                                       .setTimeScale(
-                                                                                                                               forcFourMeta.getTimeScale() )
-                                                                                                                       .setUnit(
-                                                                                                                               forcFourMeta.getUnit() )
-                                                                                                                       .setVariableName(
-                                                                                                                               forcFourMeta.getVariableName() )
-                                                                                                                       .setFeature(
-                                                                                                                               feature )
-                                                                                                                       .build() )
-                                                                         .build();
+        TimeSeries<Double> forecastSixInner =
+                new TimeSeries.Builder<Double>().addEvents( this.forecastFour.getEvents() )
+                                                .setMetadata( new TimeSeriesMetadata.Builder()
+                                                                      .setReferenceTimes( forcFourMeta.getReferenceTimes() )
+                                                                      .setTimeScale( forcFourMeta.getTimeScale() )
+                                                                      .setUnit( forcFourMeta.getUnit() )
+                                                                      .setVariableName( forcFourMeta.getVariableName() )
+                                                                      .setFeature( feature )
+                                                                      .build() )
+                                                .build();
 
         Mockito.when( this.forecastRetriever.get() )
-               .thenReturn( Stream.of( this.forecastThree, this.forecastFour, forecastFive, forecastSix ) );
+               .thenReturn( Stream.of( this.forecastThree, this.forecastFour, forecastFiveInner, forecastSixInner ) );
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplier = CachingRetriever.of( this.forecastRetriever );
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_18T11_00_00Z, //2551-03-18T11:00:00Z
-                                                                         T2551_03_19T00_00_00Z, //2551-03-19T00:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_18T11_00_00Z, //2551-03-18T11:00:00Z
+                                                           T2551_03_19T00_00_00Z, //2551-03-19T00:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolWindow = TimeWindowOuter.of( inner );
 
         Geometry geometry = Geometry.newBuilder()
@@ -1086,10 +1078,10 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierOne = this.forecastRetriever;
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
-                                                                         T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
+                                                           T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolOneWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolOneMetadata = PoolMetadata.of( this.multiFeatureMetadata,
@@ -1214,17 +1206,17 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierOne = this.forecastRetriever;
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
-                                                                         T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
+                                                           T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolOneWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolOneMetadata = PoolMetadata.of( this.anotherMultiFeatureMetadata,
                                                         poolOneWindow,
                                                         this.desiredTimeScale );
 
-        TimeSeriesCrossPairer<Pair<Double, Double>,Pair<Double, Double>> crossPairer = TimeSeriesCrossPairer.of();
+        TimeSeriesCrossPairer<Pair<Double, Double>, Pair<Double, Double>> crossPairer = TimeSeriesCrossPairer.of();
         CrossPair crossPair = new CrossPair( CrossPairMethod.EXACT, CrossPairScope.ACROSS_FEATURES );
 
         Supplier<Pool<TimeSeries<Pair<Double, Double>>>> poolOneSupplier =
@@ -1294,10 +1286,10 @@ class PoolSupplierTest
 
         Supplier<Stream<TimeSeries<Double>>> forcSupplierOne = this.forecastRetriever;
 
-        TimeWindow inner = wres.statistics.MessageFactory.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
-                                                                         T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
-                                                                         Duration.ofHours( 0 ),
-                                                                         Duration.ofHours( 23 ) );
+        TimeWindow inner = MessageUtilities.getTimeWindow( T2551_03_17T00_00_00Z, //2551-03-17T00:00:00Z
+                                                           T2551_03_17T13_00_00Z, //2551-03-17T13:00:00Z
+                                                           Duration.ofHours( 0 ),
+                                                           Duration.ofHours( 23 ) );
         TimeWindowOuter poolOneWindow = TimeWindowOuter.of( inner );
 
         PoolMetadata poolOneMetadata = PoolMetadata.of( this.metadata,
@@ -1321,7 +1313,7 @@ class PoolSupplierTest
 
         Function<Set<Feature>, BaselineGenerator<Double>> featuredBaselineGenerator = in -> baselineGenerator;
 
-        TimeSeriesCrossPairer<Pair<Double, Double>,Pair<Double, Double>> crossPairer = TimeSeriesCrossPairer.of();
+        TimeSeriesCrossPairer<Pair<Double, Double>, Pair<Double, Double>> crossPairer = TimeSeriesCrossPairer.of();
         CrossPair crossPair = new CrossPair( CrossPairMethod.EXACT, null );
 
         Supplier<Pool<TimeSeries<Pair<Double, Double>>>> poolOneSupplier =
